# tictactoe

./: .gitignore  LICENSE  stack.yaml  tictactoe.cabal
src/: Game.hs  Main.hs
test/: Spec.hs
