name:                tictactoe
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/cackharot/tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              cackharot
maintainer:          cackharot@gmail.com
copyright:           (c) 2016 cackharot
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable tictactoe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  lens
                    ,  data-lens >= 2.10.7
                    ,  mtl >= 2.2.1
