name:                tictactoe
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/cackharot/tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              cackharot
maintainer:          cackharot@gmail.com
copyright:           (c) 2016 cackharot
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable tictactoe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  lens >= 4.13
                    ,  data-lens >= 2.10.7
                    ,  mtl >= 2.2.1
                    ,  either-unwrap


test-suite tictactoe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs

  other-modules:       Game
  build-depends:       base >= 4.7 && < 5
                    ,  hspec
                    ,  HUnit
                    ,  QuickCheck
                    ,  lens >= 4.13
                    ,  data-lens >= 2.10.7
                    ,  mtl >= 2.2.1
                    ,  test-framework
                    ,  test-framework-hunit
                    ,  test-framework-quickcheck2
                    ,  either-unwrap
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fhpc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cackharot/tictactoe
